[package]
name = "catbird-atproto"
version = "0.1.0"
edition = "2021"
description = "Shared generated AT Protocol lexicon surface for Catbird Rust crates"

[features]
default = ["namespace-bluecatbird"]
namespace-bluecatbird = []
streaming = ["jacquard-common/websocket", "dep:serde_ipld_dagcbor"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
jacquard-common = "0.9"
jacquard-derive = "0.9"
jacquard-lexicon = "0.9"
miette = "7"
rustversion = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ipld_dagcbor = { version = "0.6", optional = true }
thiserror = "1"
